[package]
name = "springsteel"
version = "0.1.0"
edition = "2021"

[dependencies]
gdk = { version = "^0.5", features = [ "v4_6" ], package = "gdk4" }
glib = { version = "^0.16", features = [ "v2_72" ] }
gtk = { version = "^0.5", features = [ "v4_6" ], package = "gtk4" }
casuarius = "^0.1"
futures = "^0.3"
