[package]
name = "springsteel"
version = "0.1.0"
edition = "2021"

[dependencies]
gdk = { version = "^0.5", features = [ "v4_6" ], package = "gdk4" }
gio = { version = "^0.16", features = [ "v2_72" ] }
glib = { version = "^0.16", features = [ "v2_72" ] }
gtk = { version = "^0.5", features = [ "v4_6" ], package = "gtk4" }
futures = "^0.3"
